--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidProjectOne</string>
+    <string name="title_activity_log_in">LogInActivity</string>
+    <string name="title_activity_background_image">BackgroundImage</string>
 </resources>
