--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">AndroidProjectOne</string>
     <string name="title_activity_log_in">LogInActivity</string>
     <string name="title_activity_background_image">BackgroundImage</string>
+    <string name="title_activity_box">BoxActivity</string>
+    <string name="title_activity_scroll">ScrollActivity</string>
 </resources>
