--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_activity_background_image">BackgroundImage</string>
     <string name="title_activity_box">BoxActivity</string>
     <string name="title_activity_scroll">ScrollActivity</string>
+    <string name="title_activity_card">CardActivity</string>
+    <string name="title_activity_row_card">RowCardActivity</string>
 </resources>
