--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_activity_scroll">ScrollActivity</string>
     <string name="title_activity_card">CardActivity</string>
     <string name="title_activity_row_card">RowCardActivity</string>
+    <string name="title_activity_top_bar">TopBarActivity</string>
+    <string name="title_activity_whats_app">WhatsAppActivity</string>
 </resources>
